--- a/standalone-frontend/base.html
+++ b/standalone-frontend/base.html
@@ -12,11 +12,9 @@
         <div class="chatbox__support">
             <div class="chatbox__header">
                 <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Robocoppi. How can I help you?</p>
+                    <p class="chatbox__description--header">Hi there! My name is RoboCoppi. Do you want to cat with me?</p>
                 </div>
             </div>
             <div class="chatbox__messages">
@@ -28,7 +26,7 @@
             </div>
         </div>
         <div class="chatbox__button">
-            <button><img src="./images/chatbox-icon.svg" /></button>
+            <button><img src="./Downloads/robocoppi_bewerkt.png" /></button>
         </div>
     </div>
 </div>
